public_html/2015/secret-2e44fac40ce121fc2afdc4cd9bbfe607/2467/source/compile
source.c: In function ‘main’:
source.c:9:28: error: expected ‘;’ before ‘mod’
       hasil=(angka^(angka))mod 2;
                            ^
